# player-middleware

./: README.md
player-3.0.2/server/drivers/position/vfh/: vfh.cc  vfh_algorithm.cc
player-arm/: cameraTest  cameraTest.cpp  cmvisionTest.config  simpleshape_h.pgm  test.cfg
player-arm/include/player-3.0/: playerconfig.h
player-arm/include/player-3.0/libplayerc++/: playerc++config.h
player-arm/lib64/: libplayerc++.so.3.0.2  libplayerc.so.3.0.2  libplayercommon.so.3.0.2  libplayercore.so.3.0.2  libplayerinterface.so.3.0.2  libplayerjpeg.so.3.0.2  libplayertcp.so.3.0.2  libplayerudp.so.3.0.2  libplayerwkb.so.3.0.2  libwavefront_standalone.so.3.0.2
player-arm/lib64/pkgconfig/: playerinterface.pc
player-arm/share/player/examples/libplayerc++/: CMakeLists.txt
player-arm/share/player/examples/plugins/exampledriver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.cfg
player-arm/share/player/examples/plugins/multidriver/: CMakeLists.txt
player-trik-driver/: .build.swo  .build.swp  CMakeLists.txt  build  gyroscope.h  init  moc_trikMotors.h  trikMotors.cc  trikMotors.h
